# credit-scoring

./: .dockerignore  .gitignore  Dockerfile  README.md  data_feature_engineering.md  learning_objectives.md  pyproject.toml  requirements.txt
results/: dashboard_sample.csv
results/clients_outputs/: test_client_100001_force_plot.html  train_client_181219_force_plot.html  train_client_183260_force_plot.html  train_client_205969_force_plot.html  train_client_210316_force_plot.html  train_client_310536_force_plot.html  train_client_365516_force_plot.html
results/dashboard/: dashboard.py  feature_descriptions.txt
results/feature_engineering/: EDA.ipynb
results/feature_engineering/.ipynb_checkpoints/: EDA-checkpoint.ipynb
results/model/: baseline_coefficients.csv  kaggle_submission.csv  lightgbm_model.pkl  logistic_model.pkl  model_report.txt  my_own_model.pkl  piecewise_model.pkl
scripts/: advanced_model.py  config.py  feature_engineering.py  feature_selection.py  generate_reports.py  models.py  pipline.py  predict.py  preprocess.py  train.py
